...
            android:layout_height="235dp"
            android:background="#87CEFA"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/name_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="15dp"
            tools:text = "My name"
            android:textColor="#FFFF"
            android:textSize="22sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_favorite_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="16dp"
...
