...

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <!--  affichage des données avec le swipe ou le scroll -->
    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
